--- a/themes/hugo-devresume-theme/i18n/en.yaml
+++ b/themes/hugo-devresume-theme/i18n/en.yaml
@@ -6,11 +6,15 @@
   translation: Work Experience
 - id: information
   translation: Information
+- id: publications
+  translation: Publications
 - id: interests
   translation: Interests
 - id: languages
   translation: Languages
 - id: projects
   translation: Projects
+- id: teaching
+  translation: Teaching
 - id: skills
   translation: Skills
